@@ -3,21 +3,13 @@ if ![is_elf_format] then {
 }
 
 run_list_test "lns-diag-1" ""
-
-# Does not work on targets that do not generate line number
-# information (d10v).
-if {![istarget d10v-*-*]} {
-    run_dump_test "lns-duplicate"
-}
+run_dump_test "lns-duplicate"
 
 # ??? Won't work on targets that don't have a bare "nop" insn.
 # Perhaps we could arrange for an include file or something that
 # defined a macro...
-# Nor does it work on targets that do not generate line number
-# information (d10v).
 if {
-        ![istarget d10v-*-*]
-     && ![istarget i370-*-*]
+        ![istarget i370-*-*]
      && ![istarget i960-*-*]
      && ![istarget mcore-*-*]
      && ![istarget or32-*-*]
